<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/appbar">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/bookImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/book" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Upload book cover"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/bookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_design"
                android:hint="@string/author"
                android:padding="5dip"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/bookTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_design"
                android:hint="@string/title"
                android:padding="5dip"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/bookISBN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_design"
                android:hint="ISBN"
                android:padding="5dip"
                android:layout_margin="10dp"
                />
            <EditText
                android:id="@+id/bookCallNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_design"
                android:hint="@string/call_number"
                android:inputType="number"
                android:padding="5dip"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/bookPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_design"
                android:hint="@string/publisher"
                android:padding="5dp"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/bookPublishedYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_design"
                android:hint="@string/published_year"
                android:padding="5dip"
                android:layout_margin="10dp"
                android:inputType="phone"
                android:digits="0123456789"
                android:maxLength="4"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_design"
                android:layout_height="wrap_content" >
                <Spinner
                    android:layout_width="match_parent"
                    android:id="@+id/bookLocation"
                    android:layout_height="match_parent">

                </Spinner>
            </RelativeLayout>
            <EditText
                android:id="@+id/bookCopies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_design"
                android:hint="@string/copies"
                android:visibility="visible"
                android:inputType="phone"
                android:padding="5dip"
                android:digits="0123456789"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/addBookCopies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_design"
                android:hint="Add more copies"
                android:visibility="gone"
                android:padding="5dip"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/bookCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_design"
                android:hint="Category"
                android:padding="5dip"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/bookKeywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_design"
                android:hint="@string/keywords"
                android:padding="5dip"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/bookSubmit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sub_btn"
                android:layout_margin="10dp"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->

    <!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--tools:context="com.example.thejaswi.libraryapplication.view.fragment.BookFormFragment">-->

    <!--<FrameLayout-->

    <!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content">-->

    <!--<RelativeLayout--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content">-->

    <!--<ImageView--><!--android:id="@+id/bookImage"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_centerHorizontal="true"--><!--android:contentDescription="@string/desc"--><!--android:src="@drawable/ic_launcher_background" />-->

    <!--<LinearLayout--><!--android:id="@+id/layout1"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/bookImage"--><!--android:orientation="horizontal"--><!--android:padding="10dp">-->


    <!--<EditText--><!--android:id="@+id/bokAuthor"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:background="@drawable/edit_text_design"--><!--android:hint="@string/author"--><!--android:padding="5dip" />--><!--</LinearLayout>-->

    <!--<LinearLayout--><!--android:id="@+id/layout2"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/layout1"--><!--android:padding="10dp">-->


    <!--<EditText--><!--android:id="@+id/bookTitle"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:background="@drawable/edit_text_design"--><!--android:hint="@string/title"--><!--android:padding="5dip" />--><!--</LinearLayout>-->

    <!--<LinearLayout--><!--android:id="@+id/layout3"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/layout2"--><!--android:padding="10dp">-->


    <!--<EditText--><!--android:id="@+id/bookCallNumber"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:background="@drawable/edit_text_design"--><!--android:hint="@string/call_number"--><!--android:inputType="number"--><!--android:padding="5dip" />--><!--</LinearLayout>-->

    <!--<LinearLayout--><!--android:id="@+id/layout4"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/layout3"--><!--android:padding="10dp">-->

    <!--<EditText--><!--android:id="@+id/bookPublisher"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_marginEnd="10dp"--><!--android:background="@drawable/edit_text_design"--><!--android:hint="@string/publisher"--><!--android:padding="5dip" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout--><!--android:id="@+id/layout6"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/layout5"--><!--android:padding="10dp">-->


    <!--<EditText--><!--android:id="@+id/bookPublishedYear"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:background="@drawable/edit_text_design"--><!--android:hint="@string/published_year"--><!--android:padding="5dip" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout--><!--android:id="@+id/layout7"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/layout6"--><!--android:padding="10dp">-->


    <!--<EditText--><!--android:id="@+id/bookLocation"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:background="@drawable/edit_text_design"--><!--android:hint="@string/location"--><!--android:padding="5dip" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout--><!--android:id="@+id/layout5"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:layout_below="@+id/layout4"--><!--android:padding="10dp">-->


    <!--<EditText--><!--android:id="@+id/bookCopies"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:background="@drawable/edit_text_design"--><!--android:hint="@string/copies"--><!--android:padding="5dip" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout--><!--android:id="@+id/layout8"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/layout7"--><!--android:padding="10dp">-->

    <!--<EditText--><!--android:id="@+id/bookCurrentStatus"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:background="@drawable/edit_text_design"--><!--android:hint="@string/current_status"--><!--android:padding="5dip" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout--><!--android:id="@+id/layout9"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/layout8"--><!--android:padding="10dp">-->

    <!--<EditText--><!--android:id="@+id/bookKeywords"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:background="@drawable/edit_text_design"--><!--android:hint="@string/keywords"--><!--android:padding="5dip" />--><!--</LinearLayout>-->

    <!--<LinearLayout--><!--android:id="@+id/layout10"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/layout9"--><!--android:gravity="center"--><!--android:padding="10dp">-->

    <!--<Button--><!--android:id="@+id/bookSubmit"--><!--android:layout_width="wrap_content"--><!--android:layout_height="match_parent"--><!--android:text="@string/sub_btn" />--><!--</LinearLayout>-->


    <!--</RelativeLayout>--><!--</FrameLayout>--><!--</ScrollView>-->